# marketplace

./: .dockerignore  .env_example  .gitignore  CLAUDE.md  README.md  alembic.ini  concept.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/marketplace_api/: __init__.py  config.py  enqueue.py  main.py  schemas.py
apps/api/src/marketplace_api/routers/: __init__.py  assets.py  cards.py  cost.py  export.py  feedback.py  generate.py  health.py  ideas.py  jobs.py  products.py  projects.py  qa.py
apps/frontend/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/components/: AppShell.tsx
apps/frontend/src/lib/: api.ts  kv.ts  router.ts  theme.tsx  utils.ts
apps/frontend/src/views/: ProductView.tsx  ProjectView.tsx  ProjectsView.tsx
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/marketplace_worker/: __init__.py  celery_app.py  jobs.py  stages.py  tasks.py
docs/: idea.md  local-models.md  plan.md  promt.md
docs_marketplace/: hosting.md  plan.md  promt.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260622_1523-0824a656fc7e_initial_schema.py  20260623_1143-a10c0af96e25_товар_поле_ideas_json_стадия_2.py  20260623_1151-fddc5f32557b_набор_карточек_поле_product_id_стадия_3.py  20260623_2129-35e94f2bccf9_job_progress_and_stage_fields.py
scripts/: compare_approaches.py
(+12 files in other folders)
