[project]
name = "marketplace-api"
version = "0.1.0"
description = "Тонкий FastAPI-сервис: REST + SSE, оркестрация очереди (без torch/CUDA)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marketplace-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Парсинг multipart/form-data — загрузка фото товара (UploadFile).
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3",
    "celery>=5.4",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketplace_api"]

[tool.uv.sources]
marketplace-shared = { workspace = true }
