[project]
name = "marketplace-worker"
version = "0.1.0"
description = "Тяжёлый Celery-воркер: стадии пайплайна генерации (image/LLM/текст/QA)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marketplace-shared",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "pillow>=10.3",
]

[project.optional-dependencies]
# Этап 3 — наложение текста headless-браузером (Playwright + Chromium).
render = ["playwright>=1.45"]
# Этап 6 — локальные модели в закрытом контуре (тяжёлый ML-слой, требует GPU).
local = ["torch>=2.3", "torchvision>=0.18"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketplace_worker"]

[tool.uv.sources]
marketplace-shared = { workspace = true }
